testsuite/escript/errors/errors003-var-same-name-as-user-function.err1
Non-identifier declared as a variable: 'xyz'
